--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -42,6 +42,7 @@
         </div>
         <!-- Invoice Items Table -->
         <div class="relative p-2 border rounded border-vls/40">
+          <div><p class="text-red-500">search bar</p></div>
           <div class="relative py-0 overflow-y-auto table-scrollbar" style="max-height: 30vh">
             <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
               <thead class="sticky top-0 table-head-style border-clipper">
@@ -82,10 +83,15 @@
             <template x-if="$store.edit.invoiceItems.invoice.discount_value > 0">
               <div class="flex justify-between">
                 <span>Discount:</span>
-                <span
-                  x-text="$store.edit.invoiceItems.invoice.discount_type === 1 
-                  ? ($store.edit.invoiceItems.invoice.discount_value + '%') 
-                  : ('£' + $store.edit.invoiceItems.invoice.discount_value)"></span>
+                <div>
+                  <span
+                    x-text="$store.edit.invoiceItems.invoice.discount_type === 1
+                    ? ($store.edit.invoiceItems.invoice.discount_value + '%')
+                    : ('£' + $store.edit.invoiceItems.invoice.discount_value)"></span>
+                  <span
+                    x-show="$store.edit.invoiceItems.invoice.discount_type === 1"
+                    x-text="`(£${$store.edit.invoiceItems.invoice.discVal_ifPercent})`"></span>
+                </div>
               </div>
             </template>
             <div class="flex justify-between">
@@ -99,14 +105,18 @@
             <template x-if="$store.edit.invoiceItems.invoice.deposit_value > 0">
               <div class="flex justify-between">
                 <span>Deposit:</span>
-                <span
-                  x-text="$store.edit.invoiceItems.invoice.deposit_type === 1 ? ($store.edit.invoiceItems.invoice.deposit_value + '%') : ('£' + $store.edit.invoiceItems.invoice.deposit_value)"></span>
+                <div>
+                  <span
+                    x-text="$store.edit.invoiceItems.invoice.deposit_type === 1 ? ($store.edit.invoiceItems.invoice.deposit_value + '%') : ('£' + $store.edit.invoiceItems.invoice.deposit_value)"></span>
+                  <span
+                    x-show="$store.edit.invoiceItems.invoice.deposit_type === 1"
+                    x-text="`(£${$store.edit.invoiceItems.invoice.depoVal_ifPercent})`"></span>
+                </div>
               </div>
             </template>
             <div class="flex justify-between font-semibold">
               <span>Remaining:</span>
-              <span
-                x-text="'£' + ($store.price.roundToTwo($store.edit.invoiceItems.invoice.total - $store.edit.invoiceItems.invoice.deposit_value))"></span>
+              <span x-text="'£' + ($store.edit.invoiceItems.invoice.remaining)"></span>
             </div>
           </div>
           <div
@@ -134,7 +144,7 @@
     </div>
   </template>
 
-  <!-- Full Parent Edit Modal -->
+  <!-- Large Edit Invoice Modal -->
   <template x-if="$store.edit.openEditModal">
     <div class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50">
       <!-- Modal Container -->
@@ -160,7 +170,7 @@
                 x-model="$store.edit.existingItems.searchQuery" />
             </div>
           </div>
-          <!-- Outer container limited to 30% of modal height -->
+          <!-- Container 30% of modal height -->
           <div class="relative p-2 border rounded border-vls/40">
             <div class="relative py-0 overflow-y-auto table-scrollbar" style="max-height: 30vh">
               <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
@@ -372,9 +382,7 @@
                   </div>
                 </div>
               </template>
-              <div
-                x-show="$store.edit.invoiceItems.invoice.deposit_value > 0"
-                class="flex justify-between font-semibold">
+              <div class="flex justify-between font-semibold">
                 <span>Remaining:</span>
                 <span x-text="'£' + $store.edit.invoiceItems.invoice.remaining"></span>
               </div>
@@ -558,10 +566,11 @@
                 </button>
 
                 <!-- Deposit Modal -->
+
                 <div
                   x-show="$store.edit.modDepo"
                   x-transition.duration.300
-                  class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
+                  class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 w-full h-full">
                   <div
                     @mouseenter="$store.edit.showXDepo = true"
                     @mouseleave="$store.edit.showXDepo = false"
@@ -618,8 +627,16 @@
                   </button>
                 </div>
                 <div
-                  x-data="tooltip('Ready to invoice client? \n Saves as an attached invoice.\n In your invoice book.', { position: 'top' })">
-                  <button @click="$store.edit.saveEdit({mode: 'copy'})" class="modal-btn-prim flex items-center">
+                  x-data="tooltip('Ready to invoice client? \n Saves as an attached invoice.\n In your invoice book.\n Must contain deposit to use.', { position: 'top' })">
+                  <div
+                    @click="if ($store.edit.invoiceItems.invoice.deposit_value <= 0) { 
+                        callInfo('Cannot save a copy', 'Invoice must contain a deposit.'); 
+                        return; 
+                    } else { 
+                        $store.edit.saveEdit({ mode: 'copy' }) 
+                    }"
+                    class="modal-btn-prim flex items-center"
+                    :class="{ 'opacity-50 cursor-not-allowed': $store.edit.invoiceItems.invoice.deposit_value <= 0 }">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       fill="none"
@@ -633,16 +650,19 @@
                         d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
                     </svg>
                     Save Copy
-                  </button>
+                  </div>
                 </div>
-
                 <div
                   x-data="tooltip('Mark this invoice as fully paid in the invoice book.\n Remaining balance must be 0 to mark as paid.', { position: 'top' })">
-                  <button
-                    @click="$store.edit.saveEdit({mode: 'paid'});"
-                    :disabled="($store.edit.invoiceItems.invoice.remaining === 0)"
-                    :class="{ 'opacity-50 cursor-not-allowed': ($store.edit.invoiceItems.invoice.remaining !== 0) }"
-                    class="modal-btn-prim flex items-center">
+                  <div
+                    @click="if ($store.edit.invoiceItems.invoice.remaining !== 0) { 
+                  callWarning('Cannot mark as complete', 'Remaining balance must be 0.'); 
+                  return; 
+                } else { 
+                  $store.edit.saveEdit({ mode: 'paid' })
+                }"
+                    class="modal-btn-prim flex items-center"
+                    :class="{ 'opacity-50 cursor-not-allowed': $store.edit.invoiceItems.invoice.remaining !== 0 }">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       fill="none"
@@ -655,9 +675,8 @@
                         stroke-linejoin="round"
                         d="M14.121 7.629A3 3 0 0 0 9.017 9.43c-.023.212-.002.425.028.636l.506 3.541a4.5 4.5 0 0 1-.43 2.65L9 16.5l1.539-.513a2.25 2.25 0 0 1 1.422 0l.655.218a2.25 2.25 0 0 0 1.718-.122L15 15.75M8.25 12H12m9 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                     </svg>
-
-                    Mark Paid
-                  </button>
+                    Mark as Paid
+                  </div>
                 </div>
               </div>
             </div>
@@ -688,11 +707,11 @@
                 <span
                   class="px-1.5 py-0.5 text-xs font-light border rounded-full"
                   :class="{
-                    'border-green-500 text-green-500': $store.edit.selectedCopy.status === 'paid',
-                    'border-yellow-500 text-yellow-500': $store.edit.selectedCopy.status === 'pending',
-                    'border-red-500 text-red-500': $store.edit.selectedCopy.status === 'unpaid'
+                    'border-green-500 text-green-500': $store.edit.selectedCopy.invoice_status === 'paid',
+                    'border-yellow-500 text-yellow-500': $store.edit.selectedCopy.invoice_status === 'pending',
+                    'border-red-500 text-red-500': $store.edit.selectedCopy.invoice_status === 'unpaid'
                   }"
-                  x-text="$store.edit.selectedCopy.status"></span>
+                  x-text="$store.edit.selectedCopy.invoice_status"></span>
               </button>
             </div>
           </div>
